# spire-agent

./: .gitignore  README.md  mcp-config.json  package-lock.json  package.json  pyproject.toml
skill/: SKILL.md
spire_agent/: __init__.py  agent.py  cli.py  client.py  commands.py  main.py  mcp_server.py  state.py
spire_agent/llm/: __init__.py  base.py  copilot.py  factory.py  openai_provider.py
spire_agent/strategy/: __init__.py  base.py  heuristic.py  llm.py
src/: cli.ts  client.ts  commands.ts  debug.ts  mcp-server.ts  state.ts  types.ts
