[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spire-agent"
version = "0.1.0"
description = "AI agent for Slay the Spire 2 via SpireBridge"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
spire-agent = "spire_agent.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
