[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spire-agent"
version = "0.1.0"
description = "MCP server for Slay the Spire 2 via SpireBridge"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "mcp",
]

[project.scripts]
spire-mcp = "spire_agent.mcp_server:main"
spire-cli = "spire_agent.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
